--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <html>
 <head>
-    <title>My first site</title>
+    <style>
+        body
+    </style>
+    <title>Tegni</title>
+    <link rel="stylesheet" type="text/css" href="style.css"
 </head>
 <body>
     <header>    
-        <h1>Welcome to Page 1</h1>
+        <img src="images/tegni_logo.png" alt="temporary logo" style="width:300px">
+        <p>Ynni cynaliadwy i genedlaethau'r dyfodol.</p>
+        <p><a href="index_saesneg.html">English</a></p>
     </header>
-    <p>Some paragraph text with <a href="page2.html">a link to a second page</a></p>
 
-    <footer>Copyright me, 2018</footer>
+
+    <!--
+    <nav>
+      <a href="#">Link1</a>
+      <a href="#">Link2</a>
+      <a href="#">Cysylltu</a>
+    </nav>     
+-->   
+
+<article>
+    <p>
+        Mae Tegni yn gwmni Cymreig sydd yn berchen ar fferm wynt yng Nghymru, yn datblygu ffermydd gwynt a’u rhedeg. Rydym yn falch iawn o fod yn rhan o'r broses o leihau ein defnydd o danwyddau ffosil. Mae diogelu ein planed yn bwysig iawn i ni.
+    </p>
+    <p>
+        Sefydlwyd Tegni ym 1996 gan Huw Smallwood.
+    </p>
+</article>
+
+<article>
+    <h1>Y gymuned</h1>
+    <p>
+        Mae Tegni yn gweithio’n agos gyda'r gymuned leol, cynllunwyr a buddsoddwyr i sicrhau bod prosiectau yn cael eu datblygu’n llwyddiannus gydag ystyriaeth i’r amgylchfyd, y tirwedd a'r gymuned leol.
+    </p>
+</article>
+
+<article>        
+    <h1>Yr amgylchedd</h1>
+    <p>
+        Mae Tegni Cymru yn cadw cyswllt â mudiadau amgylcheddol lleol a chenedlaethol i sicrhau bod eu holl brosiectau yn cael eu datblygu gydag ystyriaeth o’r amgylchedd
+    </p>
+</article>
+
+<article>        
+    <h1>Prosiectau?</h1>
+    <p>
+        Hafoty Uchaf, ... ? Posib cael 'tab menu' i brosiectau wrach?
+    </p>
+</article>
+
+<article>
+   <h1>Cysylltu</h1>
+   <p>
+   Tegni <br />
+   Bron Graig <br />
+   Llangwm <br />
+   Corwen <br />
+   LL21 0RL <br />
+
+   <p><a href="ebost@tegni.co.uk">Ebostiwch ni</a></p>
+
+   </p>
+</article>
+
+
+<footer>Hawlfraint Tegni, 2019</footer>
 </body>
 </html>
