--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <style>
         body
     </style>
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Tegni</title>
-    <link rel="stylesheet" type="text/css" href="style.css"
 </head>
 <body>
     <header>    
-        <img src="images/tegni_logo.png" alt="temporary logo" style="width:300px">
-        <p>Ynni cynaliadwy i genedlaethau'r dyfodol.</p>
+        <img src="images/tegni_logo.png" alt="logo tegni" style="width:300px">
+        <h1 style="font-size:25px;color:white;">Ynni adnewyddol ers 1996.</h1>
         <p><a href="index_saesneg.html">English</a></p>
     </header>
 
@@ -24,36 +26,22 @@
 
 <article>
     <p>
-        Mae Tegni yn gwmni Cymreig sydd yn berchen ar fferm wynt yng Nghymru, yn datblygu ffermydd gwynt a’u rhedeg. Rydym yn falch iawn o fod yn rhan o'r broses o leihau ein defnydd o danwyddau ffosil. Mae diogelu ein planed yn bwysig iawn i ni.
+        Sefydlwyd Tegni ym 1996 gan Huw Smallwood. Rydym yn gwmni Cymreig sydd yn berchen ar fferm wynt yng Ngellioedd yng Ngogledd Cymru. Rydym yn falch iawn o ddweud ein bod wedi bod yn cynhyrchu ynni gwyrdd ers dros ugain mlynedd. 
     </p>
     <p>
-        Sefydlwyd Tegni ym 1996 gan Huw Smallwood.
+        Mae hi'n fraint cael bod yn rhan o'r datblygiadau cyffrous i'n harwain tuag at ddyfodol mwy cynaliadwy. Mae diogelu ein planed yn bwysig iawn i ni ac mae melinau gwynt yn chwarae rhan bwysig yn y broses o leihau ein defnydd o danwyddau ffosil.
     </p>
 </article>
 
 <article>
-    <h1>Y gymuned</h1>
+    <h1>Y gymuned a'r amgylchedd</h1>
     <p>
-        Mae Tegni yn gweithio’n agos gyda'r gymuned leol, cynllunwyr a buddsoddwyr i sicrhau bod prosiectau yn cael eu datblygu’n llwyddiannus gydag ystyriaeth i’r amgylchfyd, y tirwedd a'r gymuned leol.
-    </p>
-</article>
-
-<article>        
-    <h1>Yr amgylchedd</h1>
-    <p>
-        Mae Tegni Cymru yn cadw cyswllt â mudiadau amgylcheddol lleol a chenedlaethol i sicrhau bod eu holl brosiectau yn cael eu datblygu gydag ystyriaeth o’r amgylchedd
-    </p>
-</article>
-
-<article>        
-    <h1>Prosiectau?</h1>
-    <p>
-        Hafoty Uchaf, ... ? Posib cael 'tab menu' i brosiectau wrach?
+        Mae Tegni yn gweithio’n agos gyda'r gymuned leol, cynllunwyr a buddsoddwyr i sicrhau bod ein prosiectau yn cael eu datblygu’n llwyddiannus gydag ystyriaeth i’r amgylchfyd, y tirwedd a'r gymuned leol.
     </p>
 </article>
 
 <article>
-   <h1>Cysylltu</h1>
+   <h1>Cyswllt</h1>
    <p>
    Tegni <br />
    Bron Graig <br />
@@ -61,7 +49,7 @@
    Corwen <br />
    LL21 0RL <br />
 
-   <p><a href="ebost@tegni.co.uk">Ebostiwch ni</a></p>
+   <p><a href="mailto:lois.lambeth@tegni.co.uk">Ebostiwch ni</a></p>
 
    </p>
 </article>
